pushed docker config's

--- a/frontend/html/login.html
+++ b/frontend/html/login.html
@@ -1,6 +1,6 @@
 <!-- Wrap both forms in separate sections -->
 <div id="login-form-section" class="overlay">
-  <div class="login-card">
+  <div class="login-card  mx-auto ">
     <h2 class="text-center">📚 Welcome to Library</h2>
     <form id="loginForm" class="ms-auto me-auto">
       <input type="email" id="email" placeholder="Enter your email:" required class="form-control mb-3" />
